<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.droi.sdk.featuretestapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/data_test"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickDataTestButton"
                android:text="@string/data_button" />

            <Button
                android:id="@+id/reference"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickReferenceButton"
                android:text="@string/reference" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/preference"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickPreferenceButton"
                android:text="@string/preference" />

            <Button
                android:id="@+id/cloudcache"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickCloudCacheButton"
                android:text="@string/cloudcache" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/acl_test"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickACLTestButton"
                android:text="@string/acl_button" />

            <Button
                android:id="@+id/tentimes_test"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick10TimesTestButton"
                android:text="@string/test10times" />
        </LinearLayout>

        <Button
            android:id="@+id/clear_all_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickClearAllDataButton"
            android:text="@string/clearAllData" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/droifile_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickDroiFileUploadButton"
                android:text="@string/droifile_upload" />

            <Button
                android:id="@+id/droifile_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickDroiFileDownloadButton"
                android:text="@string/droifile_download" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/currentState"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </ScrollView>

    </LinearLayout>

</RelativeLayout>
